--- a/odoo-custom-addons/wifiber/views/hr_expense_view.xml
+++ b/odoo-custom-addons/wifiber/views/hr_expense_view.xml
@@ -3,19 +3,22 @@
 
      <record model="ir.ui.menu" id="hr_expense.menu_hr_expense_root">
 		 <field name="groups_id" eval="[(6, 0, [ref('group_show_expense_application_wifiber')])]"/>
+     </record>
 
+    <record model="ir.ui.menu" id="hr.menu_hr_root">
+		 <field name="groups_id" eval="[(6, 0, [ref('group_show_employee_application_wifiber')])]"/>
      </record>
 
     <record model="ir.ui.menu" id="hr_expense.menu_hr_expense_my_expenses_to_submit">
-		 <field name="groups_id" eval="[(6, 0, [ref('base.group_no_one')])]"/>
+		 <field name="groups_id" eval="[(6, 0, [ref('kin_others.group_show_settings_app')])]"/>
      </record>
 
     <record model="ir.ui.menu" id="hr_expense.menu_hr_expense_my_expenses_all">
-		 <field name="groups_id" eval="[(6, 0, [ref('base.group_no_one')])]"/>
+		 <field name="groups_id" eval="[(6, 0, [ref('kin_others.group_show_settings_app')])]"/>
      </record>
 
     <record model="ir.ui.menu" id="hr_expense.menu_hr_expense_sheet_all_to_pay">
-		 <field name="groups_id" eval="[(6, 0, [ref('base.group_no_one')])]"/>
+		 <field name="groups_id" eval="[(6, 0, [ref('kin_others.group_show_settings_app')])]"/>
      </record>
 
     <record model="ir.ui.menu" id="hr_expense.menu_hr_expense_sheet_all_to_post">
@@ -23,6 +26,10 @@
      </record>
 
     <record model="ir.ui.menu" id="hr_expense.menu_hr_expense_sheet_all">
+		 <field name="groups_id" eval="[(6, 0, [ref('hr_expense.group_hr_expense_manager'),ref('hr_expense.group_hr_expense_team_approver'),ref('group_expense_auditor_wifiber')])]"/>
+     </record>
+
+    <record model="ir.ui.menu" id="hr_expense.menu_hr_expense_configuration">
 		 <field name="groups_id" eval="[(6, 0, [ref('hr_expense.group_hr_expense_manager')])]"/>
      </record>
 
@@ -51,6 +58,25 @@
             <field name="inherit_id" ref="hr_expense.view_hr_expense_sheet_form" />
             <field name="arch" type="xml">
 
+
+                <button name="action_sheet_move_create" position="attributes" >
+                    <attribute name="attrs" >{'invisible': [('state', '!=', 'audited')]}</attribute>
+                </button>
+
+                <button name="%(hr_expense.hr_expense_refuse_wizard_action)d" position="attributes" >
+                    <attribute name="states">submit,approve,audited</attribute>
+                    <attribute name="groups" >hr_expense.group_hr_expense_team_approver,wifiber.group_expense_auditor_wifiber</attribute>
+                </button>
+
+
+                <button name="approve_expense_sheets" position="after" >
+                     <button name="audit_expense_sheets" states="approve" string="Audit Approve" type="object" groups="wifiber.group_expense_auditor_wifiber" class="oe_highlight o_expense_sheet_approve"/>
+                </button>
+
+                <field name="state" position="attributes" >
+                    <attribute name="statusbar_visible" >draft,submit,approve,audited,post,done</attribute>
+                </field>
+
                 <button name="action_sheet_move_create" position="attributes" >
                      <attribute name="groups" >wifiber.group_expense_account_application_wifiber</attribute>
                 </button>
@@ -67,7 +93,12 @@
                 <field name="analytic_account_id" position="attributes" >
                      <attribute name="invisible" >1</attribute>
                  </field>
-                <field name="account_id" position="replace" />
+                 <field name="account_id" position="attributes" >
+                     <attribute name="invisible" >1</attribute>
+                 </field>
+                <!--                <field name="account_id" position="attributes" >-->
+<!--                    <attribute name="domain" >[('user_type_id','=',15)]</attribute>-->
+<!--                </field>-->
                 <field name="unit_amount" position="replace" />
 
                 <xpath expr="//tree/field[@name='attachment_number']"  position="attributes">
@@ -99,16 +130,13 @@
 
                 <field name="date" position="after" >
                      <field name="product_id" string="Expense" options="{'no_open': True, 'no_create': True}" />
-<!--                     <field name="account_id" optional="show" options="{'no_open': True, 'no_create': True}" />-->
                 </field>
 
                 <field name="total_amount" position="before" >
                     <field name="unit_amount"  widget="monetary" options="{'currency_field': 'currency_id'}"/>
                 </field>
 
-<!--                <field name="account_id" position="attributes" >-->
-<!--                    <attribute name="domain" >[('user_type_id','=',15)]</attribute>-->
-<!--                </field>-->
+
 
                 <field name="bank_journal_id" position="attributes" >
                      <attribute name="domain" >[('is_expense','=',True)]</attribute>
@@ -133,6 +161,51 @@
 
             </field>
  </record>
+
+
+    <!-- Expenses to Audit -->
+    <record id="action_hr_expense_sheet_all_to_audit" model="ir.actions.act_window">
+            <field name="name">Expense Reports to Audit</field>
+            <field name="res_model">hr.expense.sheet</field>
+            <field name="view_mode">tree,kanban,form,pivot,graph,activity</field>
+            <field name="search_view_id" ref="hr_expense.hr_expense_sheet_view_search"/>
+            <field name="domain">[('state','=','approve')]</field>
+            <field name="context">{}</field>
+            <field name="view_id" ref="hr_expense.view_hr_expense_sheet_tree"/>
+            <field name="help" type="html">
+              <p class="o_view_nocontent_smiling_face">
+                No expense reports found
+              </p><p>
+                Audit the new expense reports approved by the expense manager.
+              </p>
+            </field>
+        </record>
+
+    <menuitem id="menu_hr_expense_sheet_all_to_audit"
+                  name="Expenses to Audit" sequence="2" parent="hr_expense.menu_hr_expense_report"
+                  action="action_hr_expense_sheet_all_to_audit"
+                  groups="group_expense_auditor_wifiber"/>
+
+
+     <record id="hr_expense.action_hr_expense_sheet_all_to_approve" model="ir.actions.act_window">
+            <field name="domain">[('state','=','submit')]</field>
+            <field name="context">{}</field>
+        </record>
+
+    <record id="hr_expense.action_hr_expense_sheet_all_to_post" model="ir.actions.act_window">
+            <field name="domain">[('state','=','audited')]</field>
+            <field name="context">{}</field>
+        </record>
+
+     <record id="hr_expense.action_hr_expense_sheet_all_to_pay" model="ir.actions.act_window">
+            <field name="domain">[('state','=','audited')]</field>
+            <field name="context">{}</field>
+        </record>
+
+     <record id="hr_expense.action_hr_expense_sheet_my_all" model="ir.actions.act_window">
+            <field name="domain">[]</field>
+        </record>
+
 
 
 </odoo>
