--- a/odoo-custom-addons/kin_helpdesk/views/helpdesk_view.xml
+++ b/odoo-custom-addons/kin_helpdesk/views/helpdesk_view.xml
@@ -339,7 +339,7 @@
             <field name="name">Ticket Category</field>
             <field name="model">kin.ticket.category</field>
               <field name="arch" type="xml">
-                <form string="Ticket Category">
+                <form string="Ticket Category" create="false" delete="false"  >
                     <sheet>
                         <group col="4" >
                             <field name="name" />
@@ -354,6 +354,17 @@
                 </form>
               </field>
           </record>
+
+        <record model="ir.ui.view" id="ticket_category_tree_view">
+            <field name="name">Ticket Category Tree</field>
+            <field name="model">kin.ticket.category</field>
+              <field name="arch" type="xml">
+                  <tree string="Ticket Category Tree" create="false" delete="false"  >
+                       <field name="name" />
+                      <field name="code" readonly="1"/>
+                  </tree>
+              </field>
+        </record>
 
          <record id="action_view_ticket_category" model="ir.actions.act_window">
             <field name="res_model">kin.ticket.category</field>
@@ -425,7 +436,7 @@
             <field name="name">User Ticket Group Tree</field>
             <field name="model">user.ticket.group</field>
               <field name="arch" type="xml">
-                  <tree string="User Ticket Group" >
+                  <tree string="User Ticket Group"   >
                         <field name="name" />
                   </tree>
               </field>
