--- a/odoo-custom-addons/wifiber/views/ticket_view.xml
+++ b/odoo-custom-addons/wifiber/views/ticket_view.xml
@@ -669,7 +669,7 @@
         <record id="view_stock_picking_form_wifiber_extend" model="ir.ui.view">
             <field name="name">stock.picking.form.wifiber.extend</field>
             <field name="model">stock.picking</field>
-            <field name="inherit_id" ref="stock.view_picking_form" />
+            <field name="inherit_id" ref="kin_stock.view_picking_form_kin_stock" />
             <field name="arch" type="xml">
                  <field name="origin" position="after" >
                      <field name="is_pause_escalation"     />
