--- a/odoo-custom-addons/wifiber/views/ticket_view.xml
+++ b/odoo-custom-addons/wifiber/views/ticket_view.xml
@@ -290,9 +290,9 @@
                          </group>
                     </page>
 
-                    <page string="Material Request" attrs="{'invisible': [('category_code', 'not in', ('installation','survey','support'))]}" >
+                    <page string="Material" attrs="{'invisible': [('category_code', 'not in', ('installation','survey','support'))]}" >
 
-                        <group string="Requested Materials" >
+                        <group string="Material Request" >
                              <field nolabel="1" name="material_request_ids"   attrs="{'readonly': [('category_code', 'not in', ('survey','installation','support'))]}"  >
                                 <tree editable="bottom" >
                                     <field name="product_id" domain="[('is_material', '=', True)]"    options="{'no_open': True, 'no_create': True}"   />
@@ -305,7 +305,7 @@
                             </field>
                         </group>
 
-                        <group string="Issued (Used) Materials" >
+                        <group string="Materials Used" >
                             <field  nolabel="1" name="move_line_ids" readonly="1" >
                                 <tree editable="bottom">
                                     <field name="product_id" />
