--- a/odoo-custom-addons/kin_stock/views/stock_view.xml
+++ b/odoo-custom-addons/kin_stock/views/stock_view.xml
@@ -22,6 +22,15 @@
 		 <field name="groups_id" eval="[(6, 0, [ref('group_show_inventory_dashboard')])]"/>
         </record>
 
+
+         <record model="ir.ui.menu" id="stock.menu_stock_warehouse_mgmt">
+		 <field name="groups_id" eval="[(6, 0, [ref('group_show_stock_operations')])]"/>
+        </record>
+
+         <record model="ir.ui.menu" id="stock.menu_warehouse_report">
+		 <field name="groups_id" eval="[(6, 0, [ref('group_show_stock_reporting')])]"/>
+        </record>
+
          <record id="stock.action_report_picking" model="ir.actions.report">
             <field name="binding_model_id" eval="False"/>
         </record>
