--- a/odoo-custom-addons/wifiber/views/hr_expense_view.xml
+++ b/odoo-custom-addons/wifiber/views/hr_expense_view.xml
@@ -58,7 +58,6 @@
             <field name="inherit_id" ref="hr_expense.view_hr_expense_sheet_form" />
             <field name="arch" type="xml">
 
-
                 <button name="action_sheet_move_create" position="attributes" >
                     <attribute name="attrs" >{'invisible': [('state', '!=', 'audited')]}</attribute>
                 </button>
@@ -74,6 +73,10 @@
 
                 <field name="state" position="attributes" >
                     <attribute name="statusbar_visible" >draft,submit,approve,audited,post,done</attribute>
+                </field>
+
+                <field name="payment_mode" position="after" >
+                    <field name="account_details" attrs="{'readonly': [('state', '!=', 'draft')], 'required': [('state', '=', 'draft')]}"  />
                 </field>
 
                 <button name="action_sheet_move_create" position="attributes" >
