--- a/odoo-custom-addons/heyden/views/loading.xml
+++ b/odoo-custom-addons/heyden/views/loading.xml
@@ -89,6 +89,7 @@
                     <attribute name="required" >True</attribute>
                 </field>
                 <field name="vat" position="after" >
+                    <field name="is_commercial" />
                     <field name="manager" />
                 </field>
             </field>
@@ -171,6 +172,18 @@
             <field name="arch" type="xml">
                 <field name="partner_id" position="after" >
                     <field name="employee_id" required="1" options ="{'no_open':True,'no_create':True}" attrs="{'readonly': [('state', 'not in', ('draft'))]}" />
+                </field>
+            </field>
+        </record>
+
+
+        <record id="product_template_form_extend_heyden" model="ir.ui.view">
+            <field name="name">product.template.form.extend.heyden</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_form_view"/>
+            <field name="arch" type="xml">
+                <field name="categ_id" position="after">
+                   <field name="mgt_product_id" />
                 </field>
             </field>
         </record>
